# sa-naver-rlhf

./: .gitignore  README.md  config.py  main.py  mocks.py  model.py  pyproject.toml  question_generator.py  test_gen.ipynb
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: dev_naver-rlhf-ui.yml  dev_naver-rlhf-web.yml  develop_naver-rlhf-web.yml
api-server/: Dockerfile  config.py  crawling.py  db_config.py  main.py  models.py  question_generator.py  services.py
api-server/infra/: README.md
api-server/infra/k8s/: cronjob.yaml  selenium-dep.yaml
api-server/infra/postgresql/: schema.sql
crawler/: Dockerfile  crawling.py  db_config.py  db_schemas.py  main.py  services.py
crawler/infra/postgresql/: pvc.yaml
crawler/infra/postgresql/helm/: values.yaml
prompts/: question_generation_instruction.md
question/: config.py  generator.py
web/: main.py  mocks.py
web/question/: generator.py
web/web_configs/: auth.yaml
web_configs/: auth.yaml
word/: cleaned_unique_words.csv  extract_embedding.py  extract_noun.py
word/result/word/: 0.json  1.json  10.json  100.json  101.json  102.json  103.json  104.json  105.json  106.json  107.json  108.json  109.json  11.json  110.json  111.json  112.json  113.json  114.json  115.json  116.json  117.json  118.json  119.json  12.json  120.json  121.json  122.json  123.json  124.json  125.json  126.json  127.json  128.json  129.json  13.json  130.json  131.json  132.json  133.json  (+479 more)
