[tool.poetry]
name = "sa-naver-rlhf"
version = "0.1.0"
description = ""
authors = ["mike <xcellentbird@gmail.com>"]
readme = "README.md"
packages = [{include = "sa_naver_rlhf"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7"
streamlit = "^1.38.0"
openai = "^1.51.2"
python-dotenv = "^1.0.1"
pydantic = "^2.9.2"
jupyter = "^1.1.1"
setuptools = "^75.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
